<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.SettingsActivitys.ContactUs"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@color/bartitle"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/ContactUs"
            app:titleMarginStart="100dp"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/regular"
            android:text="@string/MessageTitle"
            android:textColor="@color/main"
            android:textSize="15sp"
            android:layout_gravity="start"

            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/WriteHere"


            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/light"
                /></com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/regular"
            android:text="@string/MessageText"
            android:textColor="@color/main"
            android:textSize="15sp"
            android:layout_gravity="start"


            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/WriteHere"
            android:layoutDirection="rtl"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="149dp"
                android:layoutDirection="rtl"
                android:fontFamily="@font/light"

                /></com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_gravity="center"
            android:id="@+id/confirm_button"
            android:layout_marginTop="50dp"
            android:layout_width="369dp"
            android:layout_height="51dp"
            android:textColor="@color/white"
            android:background="@drawable/btn"
            android:text="@string/send"
            android:textSize="15sp"
            android:fontFamily="@font/regular"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="50dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_whatsapp_orange"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email"
                android:layout_marginStart="30dp"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>